...
    <string name="studs">No of students</string>
    <string name="pay">Payment</string>
    <string name="Feedb">Feedback</string>
    <string name="teachername">Lucy Lee</string>
    <string name="edit">Edit profile</string>
    <string name="out">Signout</string>
    <string name="add">Add</string>
    <string name="helo">helo</string>
    <string name="enterquestiontitle">Enter question Title</string>
    <string name="new_note">new note</string>
    <string name="_250">250</string>
    <string name="DRIVAGO">DRIVAGO</string>
    <string name="student_details">STUDENT DETAILS</string>
...
