...
            app:layout_constraintHorizontal_bias="0.828"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.481" />

        <Button
            android:id="@+id/btnadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setAddition"
            android:text="+"
            android:textSize="36sp"
            android:textStyle="bold"
...
